# snapvec

./: Cargo.toml  DESIGN.md  LICENSE  build.rs  flake.nix  pyproject.toml
examples/: dataset.rs
src/: arena.rs  backend.rs  graph.rs  handle.rs  level_sampler.rs  lib.rs  mem_project.rs  node.rs  storage.rs
src/metric/: mod.rs
src/metric/dot_product/: f16.rs  f32.rs  i8.rs  mod.rs  u8.rs
src/metric/l2sq_distance/: f16.rs  f32.rs  i8.rs  mod.rs  u8.rs
